fix(ChipGroup): ensure the box shadow is visible when used in ChipGoup

--- a/src/components/ChipGroup/chip-group.scss
+++ b/src/components/ChipGroup/chip-group.scss
@@ -2,10 +2,15 @@
     display: flex;
     gap: var(--spacing-sizing-02);
     width: 100%;
-    overflow: auto;
+    flex-flow: row wrap;
 
-    &[data-wrap] {
-        flex-flow: row wrap;
+    &[data-scroll] {
+        overflow: auto;
+        flex-wrap: nowrap;
+    }
+
+    &[data-elevated-chips] {
+        padding: 1px 2px 2px 1px;
     }
 }
 
